--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -19,7 +19,6 @@
 }
 
 #exportButton{
-
     float: right;
     margin-right: 4.5%;
     margin-top: 10%;
@@ -49,9 +48,12 @@
 }
 
 #resultArea{
-
     margin: 0 -3.84375px 0 0;
     width: 300px;
     height: 200px;
 }
 
+#successBox {
+    display: none;
+    position: absolute;
+}
