--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -7,22 +7,20 @@
 #left{
     margin-top: 4%;
     padding-left: 5%;
-    display: inline-block;
+    float:left;
 }
 
 #right{
     display: inline-block;
     padding-left: 5%;
     position: relative;
-    top: 7.5%;
-
+    margin-top: 4%;
 }
 
 #exportButton{
     float: right;
     margin-right: 4.5%;
     margin-top: 10%;
-
 }
 
 #sendButton{
@@ -32,13 +30,13 @@
 
 #checkbox{
     margin-left: 20%;
-
 }
 
 .progress-striped{
-    margin-left: 5%;
-    margin-top: 4%;
     width: 50%;
+    float:left;
+    position: absolute;
+    bottom: 30%;
 }
 
 #publish{
@@ -55,5 +53,7 @@
 
 #successBox {
     display: none;
-    position: absolute;
+    position: relative;
+    margin-left: 18em;
+    float:left;
 }
