--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -7,23 +7,20 @@
 #left{
     margin-top: 4%;
     padding-left: 5%;
-    display: inline-block;
+    float:left;
 }
 
 #right{
     display: inline-block;
     padding-left: 5%;
     position: relative;
-    top: 7.5%;
-
+    margin-top: 4%;
 }
 
 #exportButton{
-
     float: right;
     margin-right: 4.5%;
     margin-top: 10%;
-
 }
 
 #sendButton{
@@ -33,13 +30,13 @@
 
 #checkbox{
     margin-left: 20%;
-
 }
 
 .progress-striped{
-    margin-left: 5%;
-    margin-top: 4%;
     width: 50%;
+    float:left;
+    position: absolute;
+    bottom: 30%;
 }
 
 #publish{
@@ -49,9 +46,14 @@
 }
 
 #resultArea{
-
     margin: 0 -3.84375px 0 0;
     width: 300px;
     height: 200px;
 }
 
+#successBox {
+    display: none;
+    position: relative;
+    margin-left: 18em;
+    float:left;
+}
