--- a/src/web_portal/css/stylesheet.css
+++ b/src/web_portal/css/stylesheet.css
@@ -1,41 +1,33 @@
-/*.ifn-body {
-    color: #839496;
-    background-color: #002b36
-}*/
-.main-panel {
-    height: 100%;
-    border: 1px solid black;
-}
-
-.footer-panel {
-    padding: 20px;
-    color: #839496;
-    background-color: #002b36
-}
-
 .ifn-header {
-    height: 100px;
-    color: #839496;
-    background-color: #002b36
+    height: 5%;
+    color: #ffffff;
+    background-color: #002b36;
 }
 
-.textArea{
-    margin: 0px -3.84375px 0px 0px;
-    width: 300px;
-    height: 115px;
+.spacer {
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+.container {
+    text-align: center;
+    box-shadow: 0 0 6px #888888;
+    padding-bottom: 2%;
+    padding-top: 2%;
 }
 
-#left{
-    margin-top: 4%;
-    padding-left: 5%;
-    float:left;
-}
-
-#right{
+#left {
     display: inline-block;
-    padding-left: 5%;
-    position: relative;
-    margin-top: 4%;
+    vertical-align: top;
+}
+
+#right {
+    display: inline-block;
+    padding-left: 10%;
+    vertical-align: top;
+}
+
+#history {
+    padding-top: 2%;
 }
 
 #exportButton{
@@ -45,35 +37,23 @@
 }
 
 #sendButton{
-    float:right;
-    margin-right: 10%;
+    float: right;
 }
 
 #checkbox{
     margin-left: 20%;
 }
 
-.progress-striped{
-    width: 50%;
-    float:left;
-    position: absolute;
-    bottom: 30%;
+#publish {
+    width: 100%;
 }
 
-#publish{
-    margin: 0 -3.84375px 0 0;
-    width: 300px;
-    height: 115px;
-}
-
-#resultArea{
-    margin: 0 -3.84375px 0 0;
-    width: 300px;
-    height: 200px;
+#resultArea {
+    width: 100%;
 }
 
 #successBox {
-    display: none;
+    /*display: none;*/
     position: relative;
     margin-left: 18em;
     float:left;
@@ -81,4 +61,29 @@
 
 #statusBox {
     float: right;
+}
+
+
+.progress {
+    margin: 0 auto;
+    width: 50% !important;
+}
+.row {
+    text-align: center;
+}
+
+.prog {
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+.footer-panel {
+    color: #ffffff;
+    background-color: #002b36;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 3%;
+
 }
