--- a/src/web_portal/css/stylesheet.css
+++ b/src/web_portal/css/stylesheet.css
@@ -4,9 +4,8 @@
     background-color: #002b36;
 }
 
-.spacer {
-    padding-top: 2%;
-    padding-bottom: 2%;
+.header_row {
+    padding-top: 5%;
 }
 .container {
     text-align: center;
@@ -15,15 +14,24 @@
     padding-top: 2%;
 }
 
+.col-lg-6 {
+    padding-bottom: 2%;
+    padding-top: 2%;
+}
+
 #left {
     display: inline-block;
     vertical-align: top;
+    padding-bottom: 2%;
+    padding-left: 5%;
+    width: 50%;
 }
 
 #right {
     display: inline-block;
-    padding-left: 10%;
     vertical-align: top;
+    padding-bottom: 2%;
+    width: 48%;
 }
 
 #history {
@@ -31,9 +39,8 @@
 }
 
 #exportButton{
-    float: right;
-    margin-right: 4.5%;
-    margin-top: 10%;
+    position: inherit;
+    margin-left: 43%;
 }
 
 #sendButton{
@@ -44,16 +51,8 @@
     margin-left: 20%;
 }
 
-#publish {
-    width: 100%;
-}
-
-#resultArea {
-    width: 100%;
-}
-
 #successBox {
-    /*display: none;*/
+    display: none;
     position: relative;
     margin-left: 18em;
     float:left;
