--- a/src/web_portal/css/stylesheet.css
+++ b/src/web_portal/css/stylesheet.css
@@ -6,12 +6,15 @@
 
 .header_row {
     padding-top: 5%;
+    text-align: center;
+    padding-bottom: 2%;
+
 }
 .container {
     text-align: center;
     box-shadow: 0 0 6px #888888;
     padding-bottom: 2%;
-    padding-top: 2%;
+    background-color: #f9f8f8;
 }
 
 .col-lg-6 {
@@ -67,6 +70,7 @@
     margin: 0 auto;
     width: 50% !important;
 }
+
 .row {
     text-align: center;
 }
@@ -79,10 +83,9 @@
 .footer-panel {
     color: #ffffff;
     background-color: #002b36;
-    position: absolute;
+    position: relative;
     bottom: 0;
-    left: 0;
     width: 100%;
     height: 3%;
-
+    overflow: hidden;
 }
