--- a/src/web_portal/css/stylesheet.css
+++ b/src/web_portal/css/stylesheet.css
@@ -73,7 +73,7 @@
 .footer-panel {
     color: #ffffff;
     background-color: #002b36;
-    position: relative;
+    position: absolute;
     bottom: 0;
     width: 100%;
     height: 3%;
